add internet permission, add home header, add home state,

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,6 @@
     <string name="info">Info</string>
     <string name="views">Views</string>
     <string name="gallery">Gallery</string>
+    <string name="search_hint">Try “Luxor”</string>
+    <string name="search">Search</string>
 </resources>
