--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">Around Egypt</string>
     <string name="recommended_experiences">Recommended Experiences</string>
+    <string name="recommended">Recommended</string>
     <string name="most_recent">Most Recent</string>
     <string name="welcome">Welcome!</string>
     <string name="welcome_msg">Now you can explore any experience in 360 degrees and get all the details about it all in one place.</string>
